# OneGabo

./: .gitignore  LICENSE  Makefile  README.md
client/: cli.py  file_manager.py  main.py  message_handler.py  test.py  websocket_client.py
server/: Cargo.toml  test.py
server/src/: main.rs
server/src/authentication/: jwt.rs  mod.rs
server/src/db/: mod.rs  user.rs
server/src/handlers/: handlers.rs  mod.rs
server/src/net/: connection_handler.rs  mod.rs
server/src/network/: connection_handler.rs  ws_message_handler.rs
server/src/storage/: file_manager.rs  mod.rs
