[package]
name = "OneGabo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
tungstenite = "0.14"
futures-util = "0.3"
chrono = "0.4"
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"